[gd_scene load_steps=21 format=3 uid="uid://c5g8h6vg3v1qy"]

[ext_resource type="Script" path="res://scripts/file management.gd" id="1_e1rbs"]
[ext_resource type="FontFile" uid="uid://4ujtvc6xa177" path="res://font/Little_Malio_8-Bit.otf" id="2_x3dv1"]
[ext_resource type="Script" path="res://scripts/ErrorWindow.gd" id="3_4ac6n"]
[ext_resource type="Script" path="res://scripts/Program View.gd" id="3_rfrod"]
[ext_resource type="Script" path="res://scripts/SaveWindow.gd" id="5_mhw0u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h23tr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uc4j2"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ye7id"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="InputEventKey" id="InputEventKey_flgkd"]
device = -1
ctrl_pressed = true
keycode = 79

[sub_resource type="Shortcut" id="Shortcut_tt53e"]
events = [SubResource("InputEventKey_flgkd")]

[sub_resource type="InputEventKey" id="InputEventKey_r6o37"]
device = -1
ctrl_pressed = true
keycode = 83

[sub_resource type="Shortcut" id="Shortcut_qrg7t"]
events = [SubResource("InputEventKey_r6o37")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i3vly"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_alj6n"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1oai"]
bg_color = Color(0.372549, 0.701961, 0.960784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kk6mc"]
bg_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6rgrh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkm7j"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evtyq"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1j0o"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="ROOT" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="top bar" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
color = Color(0.219608, 0.219608, 0.219608, 1)
script = ExtResource("1_e1rbs")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Button5" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_h23tr")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc4j2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ye7id")
theme_override_styles/normal = SubResource("StyleBoxFlat_ye7id")
shortcut = SubResource("Shortcut_tt53e")
text = "New"

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_h23tr")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc4j2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ye7id")
theme_override_styles/normal = SubResource("StyleBoxFlat_ye7id")
shortcut = SubResource("Shortcut_tt53e")
text = "Open"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_h23tr")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc4j2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ye7id")
theme_override_styles/normal = SubResource("StyleBoxFlat_ye7id")
shortcut = SubResource("Shortcut_qrg7t")
text = "Save"

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme_override_colors/font_focus_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_h23tr")
theme_override_styles/hover = SubResource("StyleBoxFlat_uc4j2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ye7id")
theme_override_styles/normal = SubResource("StyleBoxFlat_ye7id")
text = "Export Schematic"

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -16.5
offset_right = -10.0
offset_bottom = 16.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
text = "VERSION 1.0"

[node name="Edit View Rect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Color Rect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="File Bar" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/Color Rect"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 945.0
offset_bottom = 60.0
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Program View" type="TextEdit" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0.12549, 0.12549, 0.12549, 1)
theme_override_colors/caret_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_i3vly")
script = ExtResource("3_rfrod")

[node name="Error Window" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_alj6n")
script = ExtResource("3_4ac6n")

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v1oai")

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -34.5
offset_right = -2.5
offset_bottom = 31.0
grow_horizontal = 0
theme_override_colors/font_hover_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_kk6mc")
theme_override_styles/hover = SubResource("StyleBoxFlat_kk6mc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kk6mc")
theme_override_styles/normal = SubResource("StyleBoxFlat_kk6mc")
keep_pressed_outside = true
text = "X"

[node name="ErrorLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_x3dv1")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center][color=red]Error Message 1 2 3[/color][/center]"

[node name="Save Window" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_alj6n")
script = ExtResource("5_mhw0u")

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v1oai")

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -34.5
offset_right = -2.5
offset_bottom = 31.0
grow_horizontal = 0
theme_override_colors/font_hover_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 11
theme_override_styles/focus = SubResource("StyleBoxFlat_kk6mc")
theme_override_styles/hover = SubResource("StyleBoxFlat_kk6mc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kk6mc")
theme_override_styles/normal = SubResource("StyleBoxFlat_kk6mc")
keep_pressed_outside = true
text = "X"

[node name="ErrorLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_x3dv1")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Save file before quitting?[/center]"

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window"]
layout_mode = 1
anchors_preset = -1
offset_left = 75.0
offset_top = 220.0
offset_right = 200.0
offset_bottom = 270.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_focus_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_6rgrh")
theme_override_styles/hover = SubResource("StyleBoxFlat_gkm7j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_evtyq")
theme_override_styles/normal = SubResource("StyleBoxFlat_p1j0o")
keep_pressed_outside = true
text = "Yes"
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window"]
layout_mode = 1
anchors_preset = -1
offset_left = 300.0
offset_top = 220.0
offset_right = 425.0
offset_bottom = 270.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_focus_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_colors/font_color = Color(0.372549, 0.701961, 0.960784, 1)
theme_override_fonts/font = ExtResource("2_x3dv1")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_6rgrh")
theme_override_styles/hover = SubResource("StyleBoxFlat_gkm7j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_evtyq")
theme_override_styles/normal = SubResource("StyleBoxFlat_p1j0o")
keep_pressed_outside = true
text = "No"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button5" to="MarginContainer/HBoxContainer/VBoxContainer/top bar" method="create_new_file" binds= ["New File"]]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button" to="MarginContainer/HBoxContainer/VBoxContainer/top bar" method="_open_file_press"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button2" to="MarginContainer/HBoxContainer/VBoxContainer/top bar" method="_save_file_press"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/top bar/MarginContainer/ColorRect/MarginContainer/HBoxContainer/Button4" to="MarginContainer/HBoxContainer/VBoxContainer/top bar" method="_compile_press"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/MarginContainer/Program View" to="MarginContainer/HBoxContainer/VBoxContainer/top bar" method="_on_program_view_text_changed"]
[connection signal="text_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/MarginContainer/Program View" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/MarginContainer/Program View" method="_on_text_changed"]
[connection signal="text_set" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/MarginContainer/Program View" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/VBoxContainer/MarginContainer/Program View" method="_on_text_changed"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window/Panel" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window" method="_mouse_input_event"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window/Panel" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window" method="_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window/Panel" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window" method="_mouse_exited"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window/Panel/Button" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Error Window" method="_close_button"]
[connection signal="gui_input" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Panel" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window" method="_mouse_input_event"]
[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Panel" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window" method="_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Panel" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window" method="_mouse_exited"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Panel/Button" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window" method="_close_button"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Button" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window" method="_exit_and_save"]
[connection signal="button_up" from="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window/Button2" to="MarginContainer/HBoxContainer/VBoxContainer/Edit View Rect/Save Window" method="_exit_without_save"]
